cli/tests/092_import_map_unmapped_bare_specifier.ts.out
[WILDCARD]error: Uncaught (in promise) TypeError: relative import path "unmapped" not prefixed with / or ./ or ../ and not in import map from "[WILDCARD]"
await import("unmapped");
^
    at [WILDCARD]
